feat: Integrate mailserver REST API and connect frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
       - ONE_DIR=1
       - ENABLE_POSTGREY=0
       - ENABLE_FAIL2BAN=1
+      - POSTFIX_REST_SERVER=true
     volumes:
       - ./docker-data/maildata:/var/mail
       - ./docker-data/mailstate:/var/mail-state
@@ -50,6 +51,7 @@ services:
       - "465:465"  # SMTPS
       - "587:587"  # MSA
       - "993:993"  # IMAPS
+      - "9090:9090" # REST API
     cap_add:
       - NET_ADMIN
       - SYS_PTRACE
