fix: prevent node_modules from being overwritten by host volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./frontend:/app
+      - /app/node_modules
     container_name: mail_service_frontend
     depends_on:
       - backend
