feat: re-architect project to use a PostgreSQL database

--- a/.env
+++ b/.env
@@ -11,3 +11,6 @@ POSTFIX_REST_SERVER_API_KEY=changemeapikey
 # Initializer settings
 POSTFIX_REST_SERVER_INITIAL_USER=admin@ispmanager.cloudns.ph
 POSTFIX_REST_SERVER_INITIAL_PASSWORD=adminpass
+
+# Mail settings
+SOGO_MAIL_DOMAIN=ispmanager.cloudns.ph
