--- a/sogo.conf
+++ b/sogo.conf
@@ -1,49 +1,44 @@
+/*
+ * SOGo configuration file
+ */
 {
-  // General SOGo configuration
-  SOGoLanguage = "English";
-  SOGoTimeZone = "America/New_York"; // <<< НАСТРОЙТЕ ВАШ ЧАСОВОЙ ПОЯС
-  SOGoMailDomain = "mail.ispmanager.cloudns.ph"; // <<< ВАШ ПОЧТОВЫЙ ДОМЕН
+  /*
+   * Common settings
+   */
+  SOGoLanguage = English;
+  SOGoTimeZone = "Europe/Moscow";
+  SOGoMailDomain = "ispmanager.cloudns.ph"; // CHANGE THIS
+  SOGoAppointmentSendEMailNotifications = YES;
+  SOGoLoginModule = "Mail";
+  SOGoMailSpoolPath = "/var/mail";
+  SOGoIMAPServer = "mailserver";
+  SOGoSMTPServer = "mailserver";
+  SOGoDraftsFolderName = "Drafts";
+  SOGoSentFolderName = "Sent";
+  SOGoTrashFolderName = "Trash";
+  SOGoJunkFolderName = "Spam";
+  SOGoArchiveFolderName = "Archive";
 
-  // Database configuration for PostgreSQL
-  SOGoProfileURL = "postgresql://sogo:dev_sogo_pass@postgresql:5432/sogo/sogo_user_profile"; // <<< ПРОСТОЙ ПАРОЛЬ ДЛЯ РАЗРАБОТКИ
-  OCSFolderInfoURL = "postgresql://sogo:dev_sogo_pass@postgresql:5432/sogo/sogo_folder_info"; // <<< ПРОСТОЙ ПАРОЛЬ ДЛЯ РАЗРАБОТКИ
-  OCSSessionsFolderURL = "postgresql://sogo:dev_sogo_pass@postgresql:5432/sogo/sogo_sessions_folder"; // <<< ПРОСТОЙ ПАРОЛЬ ДЛЯ РАЗРАБОТКИ
-
-  // IMAP and SMTP server configuration
-  SOGoIMAPServer = "imaps://mail.ispmanager.cloudns.ph:993"; // <<< ВАШ IMAP СЕРВЕР И ПОРТ
-  SOGoSMTPServer = "mail.ispmanager.cloudns.ph:587"; // <<< ВАШ SMTP СЕРВЕР И ПОРТ
-  SOGoMailingMechanism = "smtp"; // Use SMTP for sending mail
-
-  // Authentication (e.g., using IMAP for authentication)
+  /*
+   * Database configuration for user authentication
+   */
   SOGoUserSources = (
     {
-      type = imap;
+      type = sql;
       id = users;
-      hostname = "mail.ispmanager.cloudns.ph"; // <<< ВАШ IMAP СЕРВЕР ДЛЯ АУТЕНТИФИКАЦИИ
-      port = 993;
-      is  = YES;
-      bindFields = (uid);
+      viewURL = "postgresql://sogo:dev_sogo_pass@sogo-postgresql:5432/sogo/users";
       canAuthenticate = YES;
-      displayName = "IMAP Users";
-      filter = "mail = '%u'"; // Adjust if your IMAP server uses a different attribute
+      isAddressBook = YES;
+      userPasswordAlgorithm = "ssha512"; // Corresponds to Dovecot's default
+      // SQL query to fetch user details
+      Query = "SELECT email as c_uid, email as c_cn, password FROM users WHERE email = '%u'";
     }
   );
 
-  // Memcached configuration
-  SOGoMemcachedHost = "memcached";
-  SOGoMemcachedPort = 11211;
-
-  // Other settings
-  SOGoForceExternalLoginWithEmail = YES; // Allow login with email address
-  SOGoAppointmentSendEMailNotifications = YES;
-  SOGoFoldersSendEMailNotifications = YES;
-  SOGoACLsSendEMailNotifications = YES;
-  SOGoDraftsFolder = "Drafts";
-  SOGoSentMessagesFolder = "Sent Messages";
-  SOGoTrashFolder = "Trash";
-  SOGoJunkFolder = "Junk";
-  SOGoTemplatesFolder = "Templates";
-  SOGoLoginModule = "SOGoLoginModule";
-  SOGoMailFetchInterval = 300; // Fetch mail every 5 minutes
-  SOGoMaximumUploadSize = 10240; // 10MB upload limit
+  /*
+   * PostgreSQL database configuration for SOGo data (calendars, contacts)
+   */
+  SOGoProfileURL = "postgresql://sogo:dev_sogo_pass@sogo-postgresql:5432/sogo/sogo_user_profile";
+  OCSFolderInfoURL = "postgresql://sogo:dev_sogo_pass@sogo-postgresql:5432/sogo/sogo_folder_info";
+  OCSSessionsFolderURL = "postgresql://sogo:dev_sogo_pass@sogo-postgresql:5432/sogo/sogo_sessions_folder";
 }
